<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueDark"
        android:gravity="center"
        android:paddingTop="10dp"
        android:textSize="22sp"
        android:text="Info"

        android:textColor="@color/coloWhite"
        android:paddingBottom="10dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="Total:"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infototal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/zero"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="gl. (0.5L),"
            android:textColor="@color/grey"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/iprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/zero"
            android:textColor="@color/red"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="$"
            android:textColor="@color/grey"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:gravity="center_vertical"
        android:text="@string/your_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />

        <EditText
            android:id="@+id/iname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/input" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        >


        <Button
            android:id="@+id/icns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"

            android:layout_gravity="center"
            android:background="@drawable/stal"
            android:textColor="@color/coloWhite"
            android:text="@string/canceL"
            />

        <Button
            android:id="@+id/iok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/stal"
            android:padding="15dp"
            android:gravity="center"
            android:textColor="@color/coloWhite"
            android:text="@string/ok"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueDark"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:paddingTop="32dp" />

    </LinearLayout>

</LinearLayout>





